--- a/API.html
+++ b/API.html
@@ -3,9 +3,9 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
         
-        <p id="title"><p>
-        <p id="videoCode"></p>
-        <p id="status"></p>
+        <p id="title">firstNull<p>
+        <p id="videoCode">secondNull</p>
+        <p id="status">thirdNull</p>
         <input type = "button" onclick = "getVideo('numb')" value = "Display">  
     </body>
     <script>
