--- a/API.html
+++ b/API.html
@@ -3,21 +3,21 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
         
-        <p id="title">firstNull<p>
-        <p id="videoCode">secondNull</p>
-        <p id="status">thirdNull</p>
-        <input type = "button" onclick = "getVideo('numb')" value = "Display">  
+        <p id="title">first<p>
+        <p id="videoCode">second</p>
+        <p id="status">third</p>
+        <input type = "button" onclick = "getVideo('numb', 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
     </body>
     <script>
-        function getVideo(something) 
+        function getVideo(query, apiKey) 
         {
         $.ajax({
         type: 'GET',
         url: 'https://www.googleapis.com/youtube/v3/search',
         data:
         {
-            key: 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE',
-            q: something,
+            key: apiKey,
+            q: query,
             part: 'snippet',
             maxResults: 1,
             type: 'video',
