--- a/API.html
+++ b/API.html
@@ -2,7 +2,7 @@
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-        
+        <input name="searchTxt" type="text" maxlength="512" id="searchTxt"/>
         <p id="title">first<p>
         <p id="videoCode">second</p>
         <p id="status">third</p>
