--- a/API.html
+++ b/API.html
@@ -6,7 +6,7 @@
         <p id="title">first<p>
         <p id="videoCode">second</p>
         <p id="status">third</p>
-        <input type = "button" onclick = "getVideo('numb', 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
+        <input type = "button" onclick = "getVideo( document.getElementById("searchTxt").value, 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
     </body>
     <script>
         function getVideo(query, apiKey) 
