--- a/API.html
+++ b/API.html
@@ -1,4 +1,5 @@
 <html>
+    <style> body { background-color:  #474c74; } </style>
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
