--- a/API.html
+++ b/API.html
@@ -3,10 +3,10 @@
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-        <input name="searchTxt" type="text" maxlength="512" id="searchTxt"/>
-        <p id="title">first<p>
-        <p id="videoCode">second</p>
-        <p id="status">third</p>
+        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField"/>
+        <p id="title">Title: <p>
+        <p id="videoCode">VideoCode: </p>
+        <p id="status">Status: </p>
         <input type = "button" onclick = "getVideo( document.getElementById("searchTxt").value, 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
     </body>
     <script>
