--- a/API.html
+++ b/API.html
@@ -7,7 +7,7 @@
         <p id="title">Title: <p>
         <p id="videoCode">VideoCode: </p>
         <p id="status">Status: </p>
-        <input type = "button" onclick = " 'getValueFromWebsite', 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
+        <input type = "button" onclick = "getVideo('getValueFromWebsite', 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
     </body>
     <script>
         function getVideo(query, apiKey) 
