--- a/API.html
+++ b/API.html
@@ -1,18 +1,22 @@
 <html>
-    <style> body { background-color:  #474c74; } </style>
+    <style> body { background-color:  #474c74;  } </style>
+    <style> p { color: white; } </style>
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField"/>
+        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" placeholder="Search.."/>
+        <input name="searchAPI" type="text" maxlength="512" id="searchAPI" class="searchField" placeholder="API KEY.."/>
         <p id="title">Title: <p>
         <p id="videoCode">VideoCode: </p>
         <p id="status">Status: </p>
-        <input type = "button" onclick = "getVideo('getValueFromWebsite', 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE')" value = "Check">  
+        <input type = "button" onclick = "getVideo('getValueFromWebsite', 'getKeyFromWebsite')" value = "Check">  
     </body>
     <script>
         function getVideo(query, apiKey) 
         {
         if(query === 'getValueFromWebsite') query = document.getElementById("searchTxt").value;
+        let apiIndex = document.getElementById("searchTxt").value;
+        if(apiIndex === '0') apiKey = 'AIzaSyDrh-HQqjnrtPsPg4N2sOiZHmXFLe6LNmE';
         $.ajax({
         type: 'GET',
         url: 'https://www.googleapis.com/youtube/v3/search',
