--- a/API.html
+++ b/API.html
@@ -5,7 +5,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
         <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" placeholder="Search.."/>
-        <input name="searchAPI" type="text" maxlength="512" id="searchAPI" class="searchField" placeholder="API KEY.."/>
+        <input name="searchAPI" type="text" maxlength="512" id="searchAPI" class="searchField" placeholder="API KEY INDEX.."/>
         <p id="title">Title: <p>
         <p id="videoCode">VideoCode: </p>
         <p id="status">Status: </p>
