--- a/API.html
+++ b/API.html
@@ -1,6 +1,6 @@
 <html>
     <style> body { background-color:  #474c74;  } </style>
-    <style> p { color: white; display:flex; flex-direction:column; justify-content:center; min-height:100vh; } </style>
+    <style> p { color: white; display:flex; flex-direction: row; justify-content:center; } </style>
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
