--- a/API.html
+++ b/API.html
@@ -1,6 +1,8 @@
 <html>
     <style> body { background-color:  #474c74; display:flex; flex-direction: column; justify-content:center;   } </style>
     <style> p { color: white;} </style>
+    <style> #button {height: 20px; width: 40px; } </style>
+    
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
@@ -9,7 +11,7 @@
         <p id="title">Title: <p>
         <p id="videoCode">VideoCode: </p>
         <p id="status">Status: </p>
-        <input type = "button" onclick = "getVideo('getValueFromWebsite', 'getKeyFromWebsite')" value = "Check">  
+        <input id="button" type = "button" onclick = "getVideo('getValueFromWebsite', 'getKeyFromWebsite')" value = "Check">  
     </body>
     <script>
         function getVideo(query, apiKey) 
