--- a/API.html
+++ b/API.html
@@ -1,7 +1,14 @@
 <html>
     <style> body { background-color:  #474c74; display:flex; flex-direction: column; justify-content:center;   } </style>
     <style> p { color: white;} </style>
-    <style> #button {height: 20px; width: 40px; } </style>
+    <style> #button 
+        {
+            position: absolute;
+            left: 48%;
+            height: 20px; width: 200px; 
+            background-color: linear-gradient(to bottom right, #c28619, #ffc863);
+        } 
+    </style>
     
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
