--- a/API.html
+++ b/API.html
@@ -5,8 +5,8 @@
         {
             position: absolute;
             left: 48%;
-            height: 20px; width: 200px; 
-            background-color: linear-gradient(to bottom right, #c28619, #ffc863);
+            background-color: #c28619; 
+            padding: 12px 28px;
         } 
     </style>
     
