--- a/API.html
+++ b/API.html
@@ -1,13 +1,26 @@
 <html>
     <style> body { background-color:  #474c74; display:flex; flex-direction: column; justify-content:center;   } </style>
     <style> p { color: white;} </style>
-    <style> #button 
+    <style> 
+        #button 
         {
             position: absolute;
             left: 48%;
-            background-color: #c28619; 
+            background-color: #ecf542; 
+            color: white;
             padding: 12px 28px;
+            border-radius: 12px;
         } 
+        #searchTxt, #searchAPI
+        {
+            position: absolute;
+            left: 45%;
+            background-color: #ecf542; 
+            color: white;
+            padding: 28px;
+            border-radius: 12px;
+        }
+        
     </style>
     
     <body>
