--- a/API.html
+++ b/API.html
@@ -1,5 +1,5 @@
 <html>
-    <style> body { background-color:  #474c74; display:flex; flex-direction: column; justify-content:center;   } </style>
+    <style> body { background-color:  #474c74; } </style>
     <style> p { color: white;} </style>
     <style> 
         #button 
@@ -15,7 +15,7 @@
         {
             position: absolute;
             left: 45%;
-            background-color: #ecf542; 
+            background-color: #6f7054; 
             color: white;
             padding: 28px;
             border-radius: 12px;
