--- a/API.html
+++ b/API.html
@@ -15,12 +15,18 @@
         {
             position: absolute;
             left: 45%;
-            background-color: #6f7054; 
-            color: white;
+            background-color: #c6c7a7; 
+            color: black;
             padding: 28px;
-            border-radius: 12px;
         }
-        
+        #searchTxt
+        {
+            top: 10% ;
+        }
+        #searchAPI
+        {
+            top: 18% ;
+        }
     </style>
     
     <body>
