--- a/API.html
+++ b/API.html
@@ -6,6 +6,7 @@
         {
             position: absolute;
             left: 48%;
+            top: 25%;
             background-color: #ecf542; 
             color: white;
             padding: 12px 28px;
@@ -18,6 +19,8 @@
             background-color: #c6c7a7; 
             color: black;
             padding: 28px;
+            padding-left: 50px;
+            padding-right: 50px;
         }
         #searchTxt
         {
