--- a/API.html
+++ b/API.html
@@ -16,9 +16,9 @@
         {
             position: absolute;
             left: 45%;
-            background-color: #c6c7a7; 
-            color: black;
-            padding: 28px;
+            background: linear-gradient(from 0% 130% to 6% 220%, #434a70, #515985);
+            color: whitw;
+            padding: 18px;
             padding-left: 50px;
             padding-right: 50px;
         }
@@ -28,7 +28,7 @@
         }
         #searchAPI
         {
-            top: 18% ;
+            top: 20% ;
         }
     </style>
     
@@ -36,7 +36,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
         <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" placeholder="Search.."/>
-        <input name="searchAPI" type="text" maxlength="812" id="searchAPI" class="searchField" placeholder="YOUTUBE API KEY/INDEX.."/>
+        <input name="searchAPI" type="text" maxlength="812" id="searchAPI" class="searchField" placeholder="API KEY/INDEX.."/>
         <p id="title">Title: <p>
         <p id="videoCode">VideoCode: </p>
         <p id="status">Status: </p>
