--- a/API.html
+++ b/API.html
@@ -6,16 +6,18 @@
         {
             position: absolute;
             left: 48%;
-            top: 25%;
+            top: 35%;
             background-color: #ecf542; 
             color: white;
             padding: 12px 28px;
             border-radius: 12px;
+            outline: none;
+            border-width: 0px;
         } 
         #searchTxt, #searchAPI
         {
             position: absolute;
-            left: 45%;
+            left: 42%;
             background: linear-gradient(from 0% 130% to 6% 220%, #434a70, #515985);
             color: whitw;
             padding: 18px;
@@ -24,11 +26,11 @@
         }
         #searchTxt
         {
-            top: 10% ;
+            top: 13% ;
         }
         #searchAPI
         {
-            top: 20% ;
+            top: 23% ;
         }
     </style>
     
