--- a/API.html
+++ b/API.html
@@ -23,6 +23,9 @@
             padding: 18px;
             padding-left: 50px;
             padding-right: 50px;
+            border-radius: 12px;
+            outline: none;
+            border-width: 0px;
         }
         #searchTxt
         {
