--- a/API.html
+++ b/API.html
@@ -8,7 +8,7 @@
             left: 47%;
             top: 35%;
             background-color: #ecf542; 
-            color: white;
+            color: black;
             padding: 12px 28px;
             border-radius: 12px;
             outline: none;
