--- a/API.html
+++ b/API.html
@@ -1,5 +1,5 @@
 <html>
-    <style> body { background-color:  #474c74; } </style>
+    <style> body { background-color:  #eb842a; } </style>
     <style> p { color: white;} </style>
     <style> 
         #button 
@@ -7,7 +7,7 @@
             position: absolute;
             left: 47%;
             top: 35%;
-            background-color: #ecf542; 
+            background-color: ##4a453b; 
             color: black;
             padding: 12px 28px;
             border-radius: 12px;
