--- a/API.html
+++ b/API.html
@@ -1,5 +1,5 @@
 <html>
-    <style> body { background-color:  #eb842a; } </style>
+    <style> body { background-color:  #52473d; } </style>
     <style> p { color: white;} </style>
     <style> 
         #button 
@@ -7,7 +7,7 @@
             position: absolute;
             left: 47%;
             top: 35%;
-            background-color: ##4a453b; 
+            background-color: #4a453b; 
             color: black;
             padding: 12px 28px;
             border-radius: 12px;
@@ -19,7 +19,7 @@
             position: absolute;
             left: 42%;
             background: linear-gradient(from 0% 130% to 6% 220%, #434a70, #515985);
-            color: whitw;
+            color: white;
             padding: 18px;
             padding-left: 50px;
             padding-right: 50px;
