--- a/API.html
+++ b/API.html
@@ -7,7 +7,7 @@
             position: absolute;
             left: 47%;
             top: 35%;
-            background-color: #4a453b; 
+            background-color: #dbdbdb; 
             color: black;
             padding: 12px 28px;
             border-radius: 12px;
