--- a/API.html
+++ b/API.html
@@ -19,7 +19,7 @@
             position: absolute;
             left: 42%;
             background: linear-gradient(from 0% 130% to 6% 220%, #434a70, #515985);
-            color: white;
+            color: black;
             padding: 18px;
             padding-left: 50px;
             padding-right: 50px;
