--- a/API.html
+++ b/API.html
@@ -1,5 +1,5 @@
 <html>
-    <style> body { background-color:  #52473d; } </style>
+    <style> body { background-color:  #383d39; } </style>
     <style> p { color: white;} </style>
     <style> 
         #button 
