--- a/API.html
+++ b/API.html
@@ -5,7 +5,7 @@
         #button 
         {
             position: absolute;
-            left: 8%;
+            left: 5.5%;
             top: 38%;
             background-color: #dbdbdb; 
             color: black;
@@ -17,7 +17,7 @@
         #searchTxt, #searchAPI
         {
             position: absolute;
-            left: 3%;
+            left: .5%;
             background: linear-gradient(from 0% 130% to 6% 220%, #434a70, #515985);
             color: black;
             padding: 18px;
