--- a/API.html
+++ b/API.html
@@ -8,6 +8,7 @@
             left: 0.3%;
             padding: 50px;
             background-color: #222423; 
+             border-radius: 12px;
         }
         #button 
         {
@@ -47,14 +48,15 @@
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
-        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" placeholder="Search.."/>
-        <input name="searchAPI" type="text" maxlength="812" id="searchAPI" class="searchField" placeholder="Key/Index (UP TO 3).."/>
+       
         <div id ="conDiv">
         <p id="title">Title: <p>
         <p id="videoCode">VideoCode: </p>
         <p id="status">Status: </p>
-        <input id="button" type = "button" onclick = "getVideoFromSite()" value = "Check">
         </div>
+        <input name="searchTxt" type="text" maxlength="512" id="searchTxt" class="searchField" placeholder="Search.."/>
+        <input name="searchAPI" type="text" maxlength="812" id="searchAPI" class="searchField" placeholder="Key/Index (UP TO 3).."/>
+        <input id="button" type = "button" onclick = "getVideoFromSite()" value = "Check">
     </body>
     <script>
         function getVideo(query, apiKey) 
