--- a/API.html
+++ b/API.html
@@ -17,7 +17,8 @@
             top: 52%;
             background-color: #dbdbdb; 
             color: black;
-            padding: 12px 28px;
+            padding-left: 50px;
+            padding-right: 50px;
             border-radius: 12px;
             outline: none;
             border-width: 0px;
