--- a/API.html
+++ b/API.html
@@ -17,6 +17,7 @@
             top: 52%;
             background-color: #dbdbdb; 
             color: black;
+            padding : 18px;
             padding-left: 50px;
             padding-right: 50px;
             border-radius: 12px;
