--- a/API.html
+++ b/API.html
@@ -15,11 +15,11 @@
             position: absolute;
             left: 0.5%;
             top: 32%;
-            background-color: #dbdbdb; 
-            color: black;
+            background-color: #222423; 
+            color: white;
             padding : 16px;
-            padding-left: 75px;
-            padding-right: 75px;
+            padding-left: 70px;
+            padding-right: 70px;
             border-radius: 12px;
             outline: none;
             border-width: 0px;
