--- a/API.html
+++ b/API.html
@@ -29,6 +29,7 @@
             position: absolute;
             left: .5%;
             background: linear-gradient(from 0% 130% to 6% 220%, #222423, #515985);
+            background-color: #222423; 
             color: white;
             padding: 18px;
             padding-left: 50px;
