--- a/API.html
+++ b/API.html
@@ -1,6 +1,6 @@
 <html>
     <style> body { background-color:  #383d39; } </style>
-    <style> p { color: white;} </style>
+    <style> p { color: #dbdbdb;} </style>
     <style> 
         #conDiv
         {
@@ -16,7 +16,7 @@
             left: 0.5%;
             top: 32%;
             background-color: #222423; 
-            color: white;
+            color: #dbdbdb;
             padding : 16px;
             padding-left: 70px;
             padding-right: 70px;
@@ -28,9 +28,8 @@
         {
             position: absolute;
             left: .5%;
-            background: linear-gradient(from 0% 130% to 6% 220%, #222423, #515985);
             background-color: #222423; 
-            color: white;
+            color: #dbdbdb;
             padding: 18px;
             padding-left: 50px;
             padding-right: 50px;
