--- a/API.html
+++ b/API.html
@@ -2,7 +2,7 @@
     <style> body { background-color:  #383d39; } </style>
     <style> p { color: #dbdbdb;} </style>
     <style> 
-        *
+        body
         {
             display: flex;
             justify-content: center;
