--- a/API.html
+++ b/API.html
@@ -11,15 +11,14 @@
         }
         #button 
         {
-            top: 32%;
             background-color: #222423; 
             color: #dbdbdb;
-            padding : 16px;
-            padding-left: 70px;
-            padding-right: 70px;
-            border-radius: 12px;
+            padding : 18px;
+            padding-left: 100px;
+            padding-right: 100px;
             outline: none;
             border-width: 0px;
+            width: 100%;
         } 
         #searchTxt, #searchAPI
         {
@@ -28,17 +27,9 @@
             padding: 18px;
             padding-left: 50px;
             padding-right: 50px;
-            border-radius: 12px;
             outline: none;
             border-width: 0px;
-        }
-        #searchTxt
-        {
-            top: 52% ;
-        }
-        #searchAPI
-        {
-            top: 42% ;
+            width: 100%;
         }
     </style>
     
