--- a/API.html
+++ b/API.html
@@ -4,10 +4,10 @@
     <style> 
         #conDiv
         {
-           left: 0.5%;
             padding: 50px;
             background-color: #222423; 
-            border-radius: 12px;
+            border-width: 3px;
+            border-color: black;
         }
         #button 
         {
@@ -17,8 +17,9 @@
             padding-left: 100px;
             padding-right: 100px;
             outline: none;
-            border-width: 0px;
             width: 100%;
+            border-width: 3px;
+            border-color: black;
         } 
         #searchTxt, #searchAPI
         {
@@ -28,8 +29,9 @@
             padding-left: 50px;
             padding-right: 50px;
             outline: none;
-            border-width: 0px;
             width: 100%;
+            border-width: 3px;
+            border-color: black;
         }
     </style>
     
