--- a/API.html
+++ b/API.html
@@ -8,6 +8,7 @@
             background-color: #222423; 
             border-width: 3px;
             border-color: black;
+            min-height: 50%;
         }
         #button 
         {
